# AppImageUpdater

./: .gitmodules  .travis.yml  .travis.yml.old  AppImageImageProvider.cc  AppImageImageProvider.hpp  AppImageUpdater.cc  AppImageUpdater.cpp  AppImageUpdater.desktop  AppImageUpdater.hpp  AppImageUpdater.pro  AppImageUpdater.ui  AppImageUpdaterDialog.hpp  AppImageUpdaterResources.qrc  AppImageUpdaterStandalone.cc  AppImageUpdaterStandalone.hpp  AuthorizationDialog.cc  AuthorizationDialog.hpp  AuthorizationDialog.ui  BuildConstants.cc  BuildConstants.hpp  CMakeLists.txt  DropItemParser.cc  DropItemParser.hpp  Executer.cc  Executer.hpp  Executer_p.cc  Executer_p.hpp  Helpers.cc  Helpers.hpp  README.md  SeedManager.cc  SeedManager.hpp  SeedManager_p.cc  SeedManager_p.hpp  Seeder.cc  Seeder.hpp  Seeder_p.cc  Seeder_p.hpp  SettingsDialog.cc  SettingsDialog.hpp  (+16 more)
.github/workflows/: deploy.yml
Pre-BuiltOpenSSL/: .MTREE  .PKGINFO
Pre-BuiltOpenSSL/usr/lib/pkgconfig/: openssl.pc
app_resources/: resources.qrc
build_resources/: AppImageUpdater.desktop  appimageupdater.desktop  build_qt_static.sh
cli/: CMakeLists.txt  cli.pro  cutelog.c  cutelog.h  main.cc
cli/appdir/usr/share/applications/: appimageupdater.desktop
dest/: AppImageUpdater  CMakeCache.txt  Makefile  cmake_install.cmake
dest/AppImageUpdaterBridge/: Makefile  cmake_install.cmake  config.h
dest/AppImageUpdaterBridge/AIUpdaterBridge_autogen/: moc_predefs.h
dest/AppImageUpdaterBridge/AIUpdaterBridge_autogen/EWIEGA46WW/: moc_AIUpdaterBridge.cpp
dest/AppImageUpdaterBridge/QAIUpdateInformation/: Makefile
dest/AppImageUpdaterBridge/QAIUpdateInformation/QAIUpdateInformation_autogen/: moc_predefs.h  mocs_compilation.cpp
dest/AppImageUpdaterBridge/QAIUpdateInformation/QAIUpdateInformation_autogen/EWIEGA46WW/: moc_QAIUpdateInformation.cpp
dest/AppImageUpdaterBridge/librcksum/: CTestTestfile.cmake  Makefile  md4test
dest/AppImageUpdaterBridge/libzsync/: CTestTestfile.cmake  Makefile
dest/AppImageUpdaterBridge/zlib/: Makefile
dest/AppImageUpdater_autogen/EWIEGA46WW/: qrc_AppImageUpdaterResources.cpp
qml/: main.qml  qml.qrc
qml/Components/: AboutPage.qml  MainMenu.qml
qml/Pages/: AboutPage.qml  CompletedPage.qml  FailedPage.qml  HomePage.qml  QueuedPage.qml  SettingsPage.qml
release_notes/: v2.0.0.md
resources/: resources.qrc
scripts/: release_notes.py
src/: AppImageUpdater.hpp  CMakeLists.txt  main.cpp  src.pro
ui_templates/: AppImageUpdater.ui  mainwidget.ui
